// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Harness Approval tests Basic snapshot - deploymentform mode readonly: harness-approval-deploymentform-readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group approvalMessage deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvalMessage"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvalMessage"
        >
          pipeline.approvalStep.message
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          maxlength="1024"
          name="spec.approvalMessage"
        />
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <label
            class="bp3-label"
            data-tooltip-id="harnessApprovalRuntime_userGroups"
          >
            common.userGroups
          </label>
          <div
            class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
          >
            <div
              class="StyledProps--font StyledProps--main pointer"
            >
              <p
                class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
              >
                common.selectUserGroups
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvers.minimumCount"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvers.minimumCount"
        >
          pipeline.approvalStep.minimumCount
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            min="1"
            name="spec.approvers.minimumCount"
            type="number"
            value="0"
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - deploymentform mode: harness-approval-deploymentform 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group approvalMessage deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvalMessage"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvalMessage"
        >
          pipeline.approvalStep.message
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          maxlength="1024"
          name="spec.approvalMessage"
        />
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <label
            class="bp3-label"
            data-tooltip-id="harnessApprovalRuntime_userGroups"
          >
            common.userGroups
          </label>
          <div
            class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
          >
            <div
              class="StyledProps--font StyledProps--main pointer"
            >
              <p
                class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
              >
                common.selectUserGroups
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvers.minimumCount"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvers.minimumCount"
        >
          pipeline.approvalStep.minimumCount
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            min="1"
            name="spec.approvers.minimumCount"
            type="number"
            value="0"
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - input variable view: harness-approval-input variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  >
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            name
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            timeout
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          1d
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            approvalMessage
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          Please review the following information and approve the pipeline progression
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            includePipelineExecutionHistory
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          true
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            userGroups
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            minimumCount
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          1
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            approverInputs
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          {
  "name": "",
  "defaultValue": ""
}
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - inputset mode but no runtime values: harness-approval-inputset-noruntime 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - inputset mode: input set with errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group bp3-intent-danger approvalMessage deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvalMessage"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvalMessage"
        >
          pipeline.approvalStep.message
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-intent-danger bp3-fill"
          maxlength="1024"
          name="spec.approvalMessage"
        />
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.approvalStep.validation.approvalMessage
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <label
            class="bp3-label"
            data-tooltip-id="harnessApprovalRuntime_userGroups"
          >
            common.userGroups
          </label>
          <div
            class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
          >
            <div
              class="StyledProps--font StyledProps--main pointer"
            >
              <p
                class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
              >
                common.selectUserGroups
              </p>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.approvalStep.validation.userGroups
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.approvers.minimumCount"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.approvers.minimumCount"
        >
          pipeline.approvalStep.minimumCount
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group bp3-intent-danger"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            min="1"
            name="spec.approvers.minimumCount"
            type="number"
            value="0"
          />
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.approvalStep.validation.minimumCountRequired
            </span>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "approvalMessage": "pipeline.approvalStep.validation.approvalMessage",
    "approvers": {
      "userGroups": "pipeline.approvalStep.validation.userGroups",
      "minimumCount": "pipeline.approvalStep.validation.minimumCountRequired"
    }
  }
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Edit stage - readonly: edit stage readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="formGroup lg"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="harnessApproval_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group bp3-disabled sm"
            data-id="timeout-1"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_timeout"
              >
                pipelineSteps.timeoutLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-disabled bp3-fill"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="5s"
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="stepSubSectionHeading"
        >
          Approval Message
        </div>
        <div
          class="formGroup"
        >
          <div
            class="bp3-form-group bp3-disabled approvalMessage"
            data-id="spec.approvalMessage-2"
          >
            <label
              class="bp3-label"
              for="spec.approvalMessage"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvalMessage"
              >
                message
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <textarea
                  class="bp3-input input"
                  disabled=""
                  name="spec.approvalMessage"
                  placeholder="Please add relevant information for this step"
                />
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED multiBtn"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="spec.includePipelineExecutionHistory-3"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
            >
              <input
                disabled=""
                name="spec.includePipelineExecutionHistory"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="harnessApproval_spec.includePipelineExecutionHistory"
              >
                pipeline.approvalStep.includePipelineExecutionHistory
              </span>
            </label>
          </div>
        </div>
        <div
          class="stepSubSectionHeading"
        >
          Approvers
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group"
            data-id="null-4"
          >
            <label
              class="bp3-label"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvers.userGroups"
              >
                common.userGroups
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main multiTypeSupport"
              >
                <div
                  class="bp3-form-group"
                  data-id="undefined-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main bp3-input bp3-disabled userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                      >
                        <div
                          class="StyledProps--font StyledProps--main pointer"
                        >
                          <p
                            class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                          >
                            common.selectUserGroups
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.approvers.minimumCount-6"
          >
            <label
              class="bp3-label"
              for="spec.approvers.minimumCount"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvers.minimumCount"
              >
                pipeline.approvalStep.minimumCount
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="spec.approvers.minimumCount"
                    type="number"
                    value="1"
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="spec.approvers.disallowPipelineExecutor-7"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
            >
              <input
                disabled=""
                name="spec.approvers.disallowPipelineExecutor"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="harnessApproval_spec.approvers.disallowPipelineExecutor"
              >
                pipeline.approvalStep.disallowPipelineExecutor
              </span>
            </label>
          </div>
        </div>
        <div
          class="noLookDivider"
        />
        <div
          class="Accordion--accordion accordion"
        >
          <div
            class="Accordion--panel"
            data-open="false"
            data-testid="optional-config-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="optional-config-summary"
            >
              <div
                class="Accordion--chevron"
              />
              <div
                class="Accordion--label"
              >
                common.optionalConfig
              </div>
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Harness Approval tests On submit call: values populating on edit 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="formGroup lg"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      hhaass
                    </span>
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="harnessApproval_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="harness approval step"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group sm"
            data-id="timeout-1"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_timeout"
              >
                pipelineSteps.timeoutLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="10m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="stepSubSectionHeading"
        >
          Approval Message
        </div>
        <div
          class="formGroup"
        >
          <div
            class="bp3-form-group approvalMessage"
            data-id="spec.approvalMessage-2"
          >
            <label
              class="bp3-label"
              for="spec.approvalMessage"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvalMessage"
              >
                message
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--input"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.approvalMessage"
                        placeholder="<+expression>"
                        type="text"
                        value="Approving pipeline <+pname>"
                      />
                    </div>
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--EXPRESSION multiBtn"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="expression-input"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 12.46 4.07"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.92 4l.4-1 .42 1h.72l-.65-1.51.63-1.49h-.73l-.39 1L11 1h-.73l.62 1.51L10.18 4zm-2-.71a.29.29 0 01-.23-.1.61.61 0 01-.14-.28 1.34 1.34 0 010-.42 1.31 1.31 0 010-.42.61.61 0 01.14-.28.33.33 0 01.23-.1.3.3 0 01.22.1.67.67 0 01.14.28 1.34 1.34 0 010 .42 1.34 1.34 0 010 .42.61.61 0 01-.14.28.28.28 0 01-.26.12zm.25.75a.7.7 0 00.45-.17 1.17 1.17 0 00.33-.52 2.66 2.66 0 00.05-.84 2.68 2.68 0 00-.12-.87 1.17 1.17 0 00-.34-.51.66.66 0 00-.41-.13.53.53 0 00-.31.08.7.7 0 00-.21.21 1.23 1.23 0 00-.12.26V0h-.74v4h.71v-.47a.91.91 0 00.13.26.58.58 0 00.21.2.56.56 0 00.33.07zm-2.78-.22v-1h.77V2h-.77V1h-.6v1H5v.79h.77v1zM3.13 4l.41-1L4 4h.73L4 2.51 4.65 1h-.73l-.38 1-.38-1h-.73l.62 1.51L2.4 4zM1 3.44a.28.28 0 01-.2-.08.29.29 0 01-.09-.23A.47.47 0 01.72 3a.38.38 0 01.11-.11.75.75 0 01.17-.11H1.38V3a.51.51 0 01-.06.25.45.45 0 01-.15.18.37.37 0 01-.17.01zm-.22.63A.82.82 0 001 4a.6.6 0 00.22-.16 1 1 0 00.16-.26V4h.69V2A1.18 1.18 0 002 1.54a.85.85 0 00-.21-.31A1 1 0 001.5 1a1.29 1.29 0 00-.4 0 1.05 1.05 0 00-.52.12.86.86 0 00-.34.34 1.35 1.35 0 00-.16.49L.75 2a.38.38 0 01.11-.22.32.32 0 01.23-.09.26.26 0 01.21.09.28.28 0 01.08.22.17.17 0 010 .15.45.45 0 01-.17.08l-.32.05a1.65 1.65 0 00-.32.07 1 1 0 00-.27.17.62.62 0 00-.18.28 1 1 0 00-.12.38 1.06 1.06 0 00.1.5.62.62 0 00.26.32.71.71 0 00.39.07z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="spec.includePipelineExecutionHistory-3"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                name="spec.includePipelineExecutionHistory"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="harnessApproval_spec.includePipelineExecutionHistory"
              >
                pipeline.approvalStep.includePipelineExecutionHistory
              </span>
            </label>
          </div>
        </div>
        <div
          class="stepSubSectionHeading"
        >
          Approvers
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group"
            data-id="null-4"
          >
            <label
              class="bp3-label"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvers.userGroups"
              >
                common.userGroups
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main multiTypeSupport"
              >
                <div
                  class="bp3-form-group"
                  data-id="undefined-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main layoutHeight StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                            style="width: 95%;"
                          >
                            <div
                              class="StyledProps--font StyledProps--main pointer StyledProps--padding-top-xsmall StyledProps--padding-right-small StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--background-primary2 StyledProps--border"
                              style="width: 33%;"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                                >
                                  PROJECT
                                </p>
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall StyledProps--flex StyledProps--flex-align-center-center StyledProps--background-primary7 StyledProps--color StyledProps--color-white StyledProps--border"
                                >
                                  2
                                </p>
                              </div>
                            </div>
                            <div
                              class="StyledProps--font StyledProps--main pointer StyledProps--padding-top-xsmall StyledProps--padding-right-small StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--background-primary2 StyledProps--border"
                              style="width: 33%;"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                                >
                                  ORG
                                </p>
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall StyledProps--flex StyledProps--flex-align-center-center StyledProps--background-primary7 StyledProps--color StyledProps--color-white StyledProps--border"
                                >
                                  2
                                </p>
                              </div>
                            </div>
                            <div
                              class="StyledProps--font StyledProps--main pointer StyledProps--padding-top-xsmall StyledProps--padding-right-small StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--background-primary2 StyledProps--border"
                              style="width: 33%;"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                                >
                                  ACCOUNT
                                </p>
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall StyledProps--flex StyledProps--flex-align-center-center StyledProps--background-primary7 StyledProps--color StyledProps--color-white StyledProps--border"
                                >
                                  2
                                </p>
                              </div>
                            </div>
                          </div>
                          <span
                            class="bp3-icon bp3-icon-cross StyledProps--main pointer StyledProps--margin-left-medium StyledProps--color StyledProps--color-grey500"
                            icon="cross"
                          >
                            <svg
                              data-icon="cross"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                cross
                              </desc>
                              <path
                                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group"
            data-id="spec.approvers.minimumCount-6"
          >
            <label
              class="bp3-label"
              for="spec.approvers.minimumCount"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="harnessApproval_spec.approvers.minimumCount"
              >
                pipeline.approvalStep.minimumCount
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="spec.approvers.minimumCount"
                    type="number"
                    value="1"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="spec.approvers.disallowPipelineExecutor-7"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                name="spec.approvers.disallowPipelineExecutor"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="harnessApproval_spec.approvers.disallowPipelineExecutor"
              >
                pipeline.approvalStep.disallowPipelineExecutor
              </span>
            </label>
          </div>
        </div>
        <div
          class="noLookDivider"
        />
        <div
          class="Accordion--accordion accordion"
        >
          <div
            class="Accordion--panel"
            data-open="false"
            data-testid="optional-config-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="optional-config-summary"
            >
              <div
                class="Accordion--chevron"
              />
              <div
                class="Accordion--label"
              >
                common.optionalConfig
              </div>
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
